# mesh

./: .env.example  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  TESTING.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py  test_setup.py  uv.toml
.github/workflows/: publish.yml
docs/: DATA_HANDLER_DB_INTEGRATION.md  DATA_HANDLER_NODE.md  DYNAMIC_TOOLS_INTEGRATION.md  Gemfile  README.md  _config.yml  api-reference.md  concepts.md  examples.md  getting-started.md  guides.md  index.md  integrations.md  quick-start.md  troubleshooting.md
docs/_sass/custom/: custom.scss
docs/concepts/: event-modes.md  events.md  execution.md  graphs.md  nodes.md  variables.md
docs/guides/: deep-research.md  loops.md  orchestrator.md  streaming.md  visualization.md
docs/integrations/: event-translation.md  openai-agents.md  vel.md
examples/: 01_api_key_configuration.py  02_agent_graph.py  03_simple_streaming_example.py  10_unified_event_handling.py  EVENT_TRANSLATION.md  OPENAI_AGENTS_INTEGRATION.md  README.md  VEL_INTEGRATION.md  __init__.py  conversation_history_v2.py  cyclic_graph_example.py  fastapi_server.py  loop_timing_diagram.py  manual_graph_patterns.md  openai_agent_streaming.py  rag_node_example.py  simple_smart_feedback_v2.py  smart_feedback_loop.py  stateless_conversation_example.py  test_agent_inline_instantiation.py  test_agent_manual_graph.py  test_agent_with_dynamic_tools.py  test_datahandler_to_llm.py  test_event_mode.py  test_inline_tools_simple.py  test_manual_tool_creation.py  test_reactflow_agent_with_inline_tools.py  test_reactflow_vel_agent_with_tools.py  test_toolnode_output.py  tool_node_example.py  utilities_example.py
examples/01_single_node_basics/: README.md  llm_node.py  raw_event_access.py  vel_agent_node.py
examples/02_multi_node_graphs/: README.md  agent_chain.py  tool_to_llm.py
examples/03_advanced_patterns/: README.md  condition_node_ai_routing.py  condition_node_routing.py  cyclic_graph_max_iterations.py  loop_condition_explained.py
examples/04_event_translation/: README.md  advanced_events_demo.py  event_translation_comparison.py
examples/05_integrations/: AGENT_REGISTRY_PATTERN.md  QUICKSTART.md  README.md  fastapi_with_registry.py  frontend_example.tsx  react_flow_parse.py  test_api.sh
examples/05_integrations/flows/: agent_flow.json
examples/06_visualization/: 02_sequential_workflow.py  03_conditional_branching.py  05_mixed_node_types.py  README.md  graph_visualization_example.py
examples/07_deep_research/: __init__.py  graph.py  prompts.py  run.py  tools.py
examples/08_upgrades/: 01_checkpointing.py  02_interrupts.py  03_parallel_execution.py  04_subgraph_composition.py  05_streaming_modes.py  README.md
examples/09_input_collection/: input_collection_demo.py
examples/flows/: sample_flow.json
examples/visualization_examples/: 04_multi_agent_workflow.py
mesh/: __init__.py  checkpoints.py  input_collection.py  interrupts.py  parallel.py  subgraph.py
mesh/backends/: __init__.py  base.py  memory.py  sqlite.py
mesh/builders/: __init__.py  state_graph.py
mesh/compilation/: __init__.py  compiler.py  dynamic_compiler.py  event_handler.py  executor.py  smart_executor.py  static_compiler.py  streaming_executor.py
mesh/core/: __init__.py  edge.py  events.py  executor.py  graph.py  node.py  smart_edge.py  state.py
mesh/nodes/: __init__.py  agent.py  api_handler.py  approval.py  base.py  condition.py  control.py  conversation.py  data_handler.py  dynamic_tool_selector.py  end.py  llm.py  loop.py  orchestrator.py  rag.py  start.py  sub_agent.py  subgraph.py  tool.py  utility.py
mesh/parsers/: __init__.py  react_flow.py  validation.py
mesh/providers/: __init__.py  base.py  openai_provider.py
mesh/state/: __init__.py  state.py
mesh/streaming/: __init__.py  iterator.py  modes.py  sse.py
mesh/utils/: __init__.py  config.py  context_injection.py  errors.py  event_utils.py  input_parser.py  mermaid.py  message_handler.py  registry.py  tool_schematization.py  translator_orchestrator.py  variables.py
mesh/visualizations/: .gitignore
tests/: __init__.py  conftest.py  test_agent_events.py  test_approval_node.py  test_checkpoints.py  test_event_handler.py  test_execution.py  test_graph.py  test_interrupts.py  test_native_events_flag.py  test_nodes.py  test_parallel.py  test_streaming_modes.py  test_subgraph.py  test_terminal_validation.py
tests/integration/: test_deep_agent.py
