[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh"
version = "0.1.0"
description = "A framework-agnostic graph orchestration framework for GenAI providers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Richard Scheiwe", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0",
    "httpx>=0.24.0",
    "asyncio>=3.4.3",
    "openai>=1.97.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
google = ["google-generativeai>=0.3"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
all = ["mesh[openai,anthropic,google,dev]"]

[project.urls]
Homepage = "https://github.com/yourusername/mesh"
Documentation = "https://mesh.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/mesh/issues"

[tool.hatch.build.targets.wheel]
packages = ["mesh"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "F401",  # unused imports
    "F841",  # unused variables
    "B006",  # mutable argument
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.8"
strict = false
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["mesh"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
